# task-tracker

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml  openapi.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml  static_config.yaml.in
postgresql/data/: V002__fill_tables.sql
postgresql/schema/: V001__create_tables.sql
src/: main.cpp
src/handlers/lib/: auth.cpp  auth.hpp
src/handlers/v1/comments/add-comment/: view.cpp  view.hpp
src/handlers/v1/comments/delete-comment/: view.cpp  view.hpp
src/handlers/v1/comments/get-comment/: view.cpp  view.hpp
src/handlers/v1/comments/get-ticket-comments/: view.cpp  view.hpp
src/handlers/v1/comments/update-comment/: view.cpp  view.hpp
src/handlers/v1/login/: view.cpp  view.hpp
src/handlers/v1/queues/add-queue/: view.cpp  view.hpp
src/handlers/v1/queues/delete-queue/: view.cpp  view.hpp
src/handlers/v1/queues/get-queue/: view.cpp  view.hpp
src/handlers/v1/queues/get-queues/: view.cpp  view.hpp
src/handlers/v1/queues/update-queue/: view.cpp  view.hpp
src/handlers/v1/register/: view.cpp  view.hpp
src/handlers/v1/tickets/add-ticket/: view.cpp  view.hpp
src/handlers/v1/tickets/get-ticket/: view.cpp  view.hpp
src/handlers/v1/tickets/get-tickets-from-queue/: view.cpp  view.hpp
src/handlers/v1/tickets/update-ticket/: view.cpp  view.hpp
src/handlers/v1/unregister/: view.cpp  view.hpp
src/handlers/v1/users-queues/add-user-to-queue/: view.cpp  view.hpp
src/handlers/v1/users-queues/delete-user-from-queue/: view.cpp  view.hpp
src/handlers/v1/users-queues/get-users-from-queue/: view.cpp  view.hpp
src/handlers/v1/users/get-user-by-login/: view.cpp  view.hpp
src/handlers/v1/users/get-users/: view.cpp  view.hpp
src/handlers/v1/watchers/add-user-to-ticket/: view.cpp  view.hpp
src/handlers/v1/watchers/delete-user-from-ticket/: view.cpp  view.hpp
src/handlers/v1/watchers/get-users-by-ticket/: view.cpp  view.hpp
src/helpers/: helpers.cpp  helpers.hpp
src/models/: comment.cpp  comment.hpp  comment.ipp  queue.cpp  queue.hpp  queue.ipp  session.hpp  ticket.cpp  ticket.hpp  ticket.ipp  ticket_from_user.cpp  ticket_from_user.hpp  user.cpp  user.hpp  user.ipp  user_queue.cpp  user_queue.hpp  user_ticket.cpp  user_ticket.hpp
src/queries/: comments_queries.cpp  comments_queries.hpp  queries.cpp  queries.hpp  queues_queries.cpp  queues_queries.hpp  statuses.cpp  statuses.hpp  ticket_queries.cpp  ticket_queries.hpp  user_queries.cpp  user_queries.hpp
tests/: conftest.py  requirements.txt  test_add_queues.py  test_add_ticket.py  test_delete_comment.py  test_fixtures.py  test_get_all_queues.py  test_get_comment.py  test_login.py  test_register.py  test_update_comment.py
tg-bot/: Dockerfile  bot.py  requirements.txt
unittests/: basic.cpp
